# rs-persona-svc

./: Cargo.toml  example.env
migrations/: 20230130151004_tables.sql
src/: main.rs
src/common/: app-state.rs  env.rs
src/persona/: routes.rs  svc.rs
