[package]
name = "persona"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
config = "0.13.3"
chrono = {version = "0.4.23", features = ["serde"]}
sqlx = {version = "0.6.2", features = ["sqlite", "chrono", "json", "macros", "runtime-actix-rustls", "uuid", "offline"]}
serde = {version = "1.0.152", features = ["derive"]}
uuid = {version = "1.2.2", features = ["v4", "v5", "fast-rng", "macro-diagnostics", "serde"]}
validators = {version = "0.24.3", features = ["email", "uuid"]}
actix-web = "4"

